# core

./: CMakeLists.txt  README.md
cartocrow/: CMakeLists.txt
cartocrow/core/: CMakeLists.txt  centroid.h  core.cpp  core.h  region_map.cpp  region_map.h
cartocrow/mosaic_cartogram/: CMakeLists.txt
cartocrow/renderer/: geometry_renderer.h  geometry_widget.cpp  geometry_widget.h  ipe_renderer.cpp  ipe_renderer.h  painting_renderer.cpp  painting_renderer.h  svg_renderer.cpp  svg_renderer.h
doc/: Doxyfile
doc/pages/: main_page.md
frontend/: CMakeLists.txt  cartocrow.cpp
